--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -75,3 +75,32 @@
     }
 }
 
+/* styles/index.module.css */
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 1000; /* Some high value to ensure it's on top of other content */
+    background-color: rgba(0,0,0,0.5); /* Semi-transparent black */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .spinner {
+    border: 16px solid #f3f3f3; 
+    border-top: 16px solid #740a66; 
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
